<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.owner.AddSpendsAndIncomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.admin.AddProductFragment">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="650dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/add_product_image_button2"
                android:layout_width="210dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/borderstyle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/add_register_name_ET"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="Nombre del gasto/ingreso"
                    android:inputType="textPersonName"
                    android:background="transparent"
                    android:paddingVertical="14dp"
                    android:paddingHorizontal="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:background="@drawable/borderstyle"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/add_amount_ET"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="transparent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:background="@drawable/borderstyle"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/add_amount_TV"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/monto"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/add_inconme_BTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/agregar_como_ingreso"
                android:background="@drawable/buttonbackground"
                app:backgroundTint="@color/browser_actions_divider_color"
                app:backgroundTintMode="add"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/add_product_BTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/agregar_como_costo"
                android:background="@drawable/buttonbackground"
                app:backgroundTint="@color/browser_actions_divider_color"
                app:backgroundTintMode="add"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>